refactor: : 레거시 추천 서비스를 제거하고 Resilience4j 구성을 향상
- 레거시 정리의 일환으로 '강화된 추천 서비스'와 '추천 서비스'를 삭제
- ML 임베딩 서비스, Kafka 프로듀서, 그리고 Redis 캐시를 위한 특수 구성으로 'ResilienceConfig'를 업데이트
- 회로 차단기, 격벽 및 속도 제한기를 위한 향상된 복원력 4j 설정.